--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,9 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Headers = "Content-Type, Authorization"
     Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+
+# මෙම කොටස අලුතින් එක් කරන්න (404 Error එක විසඳීමට)
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
